<resources>
    <string name="app_name">Sandbox</string>
    <string name="action_settings">Settings</string>
    <string name="on">ON</string>
    <string name="off">OFF</string>
    <string name="love">Love</string>
    <string name="hate">Hate</string>
    <string name="grey">Grey Fox</string>
    <string name="red">Red Fox</string>
    <string name="fox">A little broadside fox.</string>
</resources>
